# cardetec

./: .gitignore  README.md  install-termux.sh  jalan.py  mulai.bat  mulai.sh  pyproject.toml  requirements-desktop.txt  requirements-termux.txt
.github/workflows/: ci.yml
configs/: camera-low-power.yaml  camera.yaml  default.yaml  termux.yaml
models/: README.md
src/cardetec/: __init__.py  cli.py  config.py  speed.py  tracker.py  yolo_onnx.py
tests/: test_config.py  test_speed.py
